--- a/index.html
+++ b/index.html
@@ -1,23 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>BSA</title>
+    <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
     <!-- Font Awesome Css -->
-    <link rel="stylesheet" href="assets/css/all.css">
+    <link rel="stylesheet" href="assets/css/all.css" />
     <!-- google font -->
-    
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <!-- Normalize css file -->
-    <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="stylesheet" href="assets/css/normalize.css" />
     <!-- css file -->
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <!-- Sweet Alert -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.5/dist/sweetalert2.all.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.5/dist/sweetalert2.min.css" rel="stylesheet" />
 </head>
+
 <body>
-    
+    <section class="home">
+        <section class="container">
+            <form name="contact-form" class="contact-form">
+                <h2>registration form</h2>
+                <section class="name">
+                    <input type="text" placeholder="Enter Your Name" id="name" name="Name"/>
+                </section>
+                <section class="id">
+                    <input type="text" placeholder="Enter Your National Id" id="id" name="Id"/>
+                </section>
+                <section class="email">
+                    <input type="email" placeholder="Enter Your Email" name="email"/>
+                </section>
+                <section class="phone">
+                    <input type="tel" placeholder="Enter Your phone number" name="phone"/>
+                </section>
+                <section class="department">
+                    <label for="department" class="label">If You Are A Student, Enter the Department, and if you are a graduate, write your graduation year</label>
+                    <input type="text" placeholder="Enter Your Department" id="department" name="department">
+                </section>
+                <section class="image">
+                    <label for="image" class="label">Attach aa img of your national id card</label>
+                    <input type="file" id="image"/>
+                </section>
+                <button>Send <i class="fa-solid fa-arrow-right"></i></button>
+            </form>
+        </section>
+    </section>
+
     <!-- Font Awesome Js -->
     <script src="assets/js/all.js"></script>
     <!-- Js file -->
     <script src="assets/js/main.js"></script>
 </body>
+
 </html>
