--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </section>
                 
                 <section class="phone">
-                    <label for="phone">Enter Your National Id</label>
+                    <label for="phone">Enter Your phone number</label>
                     <input type="tel" placeholder="Enter Your phone number" name="phone" id="phone"/>
                 </section>
 
