--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
             <form name="contact-form" class="contact-form">
                 <h2>registration form</h2>
                 <section class="name-ar">
-                    <label for="nameAr">Enter your third name in Arabic</label>
-                    <input type="text" placeholder="Enter Your Third Name In Arabic" id="nameAr" name="NameAr" />
+                    <label for="nameAr">Enter your full name in Arabic</label>
+                    <input type="text" placeholder="Enter Your full Name In Arabic" id="nameAr" name="NameAr" />
                 </section>
 
                 <section class="name-en">
-                    <label for="nameEn">Enter your third name in English</label>
-                    <input type="text" placeholder="Enter Your Third Name In English" id="nameEn" name="NameEn" />
+                    <label for="nameEn">Enter your full name in English</label>
+                    <input type="text" placeholder="Enter Your full Name In English" id="nameEn" name="NameEn" />
                 </section>
 
                 <section class="Gender">
@@ -41,7 +41,6 @@
                         <option value="0" selected>Enter Your Gender</option>
                         <option value="male">Male</option>
                         <option value="female">Female</option>
-                        <option value="other">Other</option>
                     </select>
                 </section>
 
