--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                 </section>
 
                 <section class="un">
-                    <label for="un">Enter the name of your university</label>
-                    <input type="text" placeholder="Enter the name of your university" id="un" name="un"> 
+                    <label for="un">Enter the name of your university-Institute</label>
+                    <input type="text" placeholder="Enter the name of your university-Institute" id="un" name="un"> 
                 </section>
 
                 <section class="Faculty">
