--- a/index.html
+++ b/index.html
@@ -59,19 +59,10 @@
                     <input type="text" placeholder="Enter Your National Id" id="nationalId" name="nationalId" />
                 </section>
 
-                <section class="National-id-front">
-                    <label for="nationalIdFront">National id photo (Front)</label>
-                    <input type="file" id="nationalIdFront" name="nationalIdFront" />
-                </section>
-
                 <section class="National-id-back">
-                    <label for="nationalIdBack">National id photo (Back)</label>
-                    <input type="file" id="nationalIdBack" name="nationalIdBack" />
-                </section>
-
-                <section class="personal-photo">
-                    <label for="personalPhoto">Personal Photo</label>
-                    <input type="file" id="personalPhoto" name="personalPhoto" />
+                    <label for="nationalIdBack">Enter the link to the pictures on Google Drive <br> ( Personal Photo - National id photo (Front) - National id photo (Back)
+                        )</label>
+                    <input type="text" id="nationalIdBack" name="nationalIdBack" placeholder="Enter the link to the pictures on me Google Drive"/>
                 </section>
 
                 <section class="un">
