--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- google font -->
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lemon" />
     <!-- Normalize css file -->
     <link rel="stylesheet" href="assets/css/normalize.css" />
     <!-- css file -->
@@ -29,90 +30,24 @@
 
 
 <body>
-    <section class="home">
+    <section class="main">
         <section class="container">
-            <form name="contact-form" class="contact-form" id="sendEmail">
-                <h2>registration form</h2>
-                <section class="name-ar">
-                    <label for="nameAr">Enter your full name in Arabic</label>
-                    <input type="text" placeholder="Enter Your full Name In Arabic" id="nameAr" name="NameAr" />
-                </section>
-
-                <section class="name-en">
-                    <label for="nameEn">Enter your full name in English</label>
-                    <input type="text" placeholder="Enter Your full Name In English" id="nameEn" name="NameEn" />
-                </section>
-
-                <section class="Gender">
-                    <label for="Gender">Enter Your gender</label>
-                    <select name="Gender" id="Gender">
-                        <option value="0" selected>Enter Your Gender</option>
-                        <option value="male">Male</option>
-                        <option value="female">Female</option>
-                    </select>
-                </section>
-
-                <section class="email">
-                    <label for="email">Enter Your Email</label>
-                    <input type="email" placeholder="Enter Your Email" name="email" id="email"/>
-                </section>
-                
-                <section class="phone">
-                    <label for="phone">Enter Your phone number</label>
-                    <input type="tel" placeholder="Enter Your phone number" name="phone" id="phone"/>
-                </section>
-
-                <section class="National-id">
-                    <label for="nationalId">Enter Your National Id</label>
-                    <input type="text" placeholder="Enter Your National Id" id="nationalId" name="nationalId" />
-                </section>
-
-                <section class="photos">
-                    <label for="photos">Enter the link to the pictures on Google Drive <br> ( Personal Photo - National id photo (Front) - National id photo (Back) ) <br> <span>Remember to access the link</span> </label>
-                    <input type="text" id="photos" name="photos" placeholder="Enter the link to the pictures on me Google Drive"/>
-                </section>
-
-                <section class="un">
-                    <label for="un">Enter the name of your university-Institute</label>
-                    <input type="text" placeholder="Enter the name of your university-Institute" id="unIn" name="un"> 
-                </section>
-
-                <section class="Faculty">
-                    <label for="Faculty">Enter the name of your Faculty</label>
-                    <input type="text" placeholder="Enter the name of your Faculty" id="Faculty" name="Faculty"> 
-                </section>
-
-                <section class="Major">
-                    <label for="Major">Enter the name of your Major</label>
-                    <input type="text" placeholder="Enter the name of your Major" id="Major" name="Major"> 
-                </section>
-
-                <section class="academic-year">
-                    <label for="academicYear">Enter the academic year</label>
-                    <input type="text" placeholder="Enter the academic year" id="academicYear" name="academicYear"> 
-                </section>
-                
-                <section class="about">
-                    <label for="about"> How did you hear about the conference</label>
-                    <input type="text" id="about" name="about" placeholder="How did you hear about the conference">
-                </section>
-
-                <section class="comments">
-                    <label for="comments"> Any comments</label>
-                    <input type="text" id="comments" name="comments" placeholder="Any comments">
-                </section>
-                <button >Send <i class="fa-solid fa-arrow-right"></i></button>
-            </form>
-            <section class="image">
+            <section class="contetnt-logo-bsa">
                 <img src="assets/images/logo.png">
+                <h2>bsa</h2>
             </section>
+            <section class="contetnt-logo-inf">
+                <section class="content-image">
+                    <img src="assets/images/infinty.png">
+                </section>
+                <h2>8<sup>th</sup> biomedical engineering conference</h2>
+            </section>
+            <p class="main-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, quidem nisi quia esse velit facilis a odit, perspiciatis commodi sapiente nostrum nam dolore tenetur modi corporis, blanditiis ab suscipit optio?</p>
+            <a href="form.html" target="_blank">Register now</a>
         </section>
     </section>
-
     <!-- Font Awesome Js -->
     <script src="assets/js/all.js"></script>
-    <!-- Js file -->
-    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
