--- a/form.html
+++ b/form.html
@@ -90,7 +90,7 @@
                 <section class="personal-photo">
                     <label for="personalPhoto">Enter the link to the personal Photo on Google Drive <span>*</span> <br> <span>Remember to access the link</span> </label>
                     <section class="content-input">
-                        <input type="text" id="personalPhoto" name="personal-photo" placeholder="Enter the link to the pictures on me Google Drive" />
+                        <input type="text" id="personalPhoto" name="personalPhoto" placeholder="Enter the link to the pictures on me Google Drive" />
                         <i class="fa-solid"></i>
                     </section>
                     <span class="errorma"></span>
