--- a/form.html
+++ b/form.html
@@ -30,6 +30,10 @@
 
 <body>
     <section class="home">
+        <section class="loading" id="loading">
+            <section class="square">
+            </section>
+        </section>
         <section class="container">
             <form name="contact-form" class="contact-form" id="sendEmail">
                 <h2>registration form</h2>
@@ -144,7 +148,7 @@
                 <section class="about">
                     <label for="about"> How did you hear about the conference <span>*</span></label>
                     <section class="content-input">
-                        <input type="text" id="about" name="about" placeholder="How did you hear about the conference" >
+                        <input type="text" id="about" name="Conference" placeholder="How did you hear about the conference" >
                         <i class="fa-solid"></i>
                     </section>
                     <span class="errorma"></span>
