--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                 </section>
                 <h2>8<sup>th</sup> biomedical engineering conference</h2>
             </section>
-            <p class="main-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, quidem nisi quia esse velit facilis a odit, perspiciatis commodi sapiente nostrum nam dolore tenetur modi corporis, blanditiis ab suscipit optio?</p>
+            <p class="main-text">Welcome to the 8th edition of the Biomedical Engineering Conference at Mansoura University, where we will take you on a journey to engineer your technical skills beyond boundaries into infinity! This year's conference is set to be the most exciting and informative yet!</p>
+            <p class="main-text">Whether you're a student, a graduate, or a professional in the field, this event is designed to help you develop your skills, gain new experiences, and stay up-to-date with the latest advancements.</p>
+            <p class="main-text">Let's go beyond boundaries into infinity and engineer a brighter future together</p>
             <a href="form.html" target="_blank">Register now</a>
         </section>
     </section>
