--- a/form.html
+++ b/form.html
@@ -180,6 +180,10 @@
                     </section>
                     <span class="errorma"></span>
                 </section>
+
+                <section class="time">
+                        <input type="text" id="time" name="time">
+                </section>
                 <button >Send <span> <i class="fa-solid fa-arrow-right"></i></span></button>
             </form>
         </section>
