--- a/form.html
+++ b/form.html
@@ -162,7 +162,6 @@
                     </section>
                     <span class="errorma"></span>
                 </section>
-                
                 <section class="about">
                     <label for="about"> How did you hear about the conference <span>*</span></label>
                     <section class="content-input">
@@ -171,7 +170,6 @@
                     </section>
                     <span class="errorma"></span>
                 </section>
-                
                 <section class="comments">
                     <label for="comments"> Any comments <span>*</span></label>
                     <section class="content-input">
@@ -180,9 +178,11 @@
                     </section>
                     <span class="errorma"></span>
                 </section>
-
                 <section class="time">
                         <input type="text" id="time" name="time">
+                </section>
+                <section class="whatsApp">
+                        <input type="text" id="whatsApp" name="whatsApp">
                 </section>
                 <button >Send <span> <i class="fa-solid fa-arrow-right"></i></span></button>
             </form>
