--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
 
 <body>
+    <section class="closed">
+        <img src="assets/images/CLOSED.png" alt="">
+        <p>registration is closed</p>
+    </section>
     <section class="main">
         <section class="container">
             <section class="contetnt-logo-bsa">
